--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
             <div class="date"></div>
             <div class="time"></div>
         </div>
+        <div class="analogue">
+            <div class="mark mark-12">12</div>
+            <div class="arr hours"></div>
+            <div class="arr minutes"></div>
+            <div class="arr seconds"></div>
+        </div>
+        <div class="pomodoro">
+            <div class="slider">
+                <div class="dot"></div>
+            </div>
+            <div class="label">Pomodoro</div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
